# geodata-backend

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
geodata_backend/: asgi.py  settings.py  urls.py  wsgi.py
